Added movie details
