# docs/swagger.json
@@ -39,6 +39,56 @@
                                 "$ref": "#/definitions/models.Movie"
                             }
                         }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                }
+            }
+        },
+        "/movies/{id}": {
+            "get": {
+                "description": "Get complete details for a specific movie",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "movies"
+                ],
+                "summary": "Get movie details",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Movie ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Movie"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid ID",
+                        "schema": {
+                            "type": "object"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "type": "object"
+                        }
                     }
                 }
             }
@@ -64,6 +114,12 @@
                             "items": {
                                 "$ref": "#/definitions/models.Movie"
                             }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "type": "object"
                         }
                     }
                 }
@@ -106,6 +162,12 @@
                                 "$ref": "#/definitions/models.Movie"
                             }
                         }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "type": "object"
+                        }
                     }
                 }
             }
@@ -129,8 +191,14 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.TrendingMovie"
+                                "$ref": "#/definitions/models.Movie"
                             }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "type": "object"
                         }
                     }
                 }
@@ -156,25 +224,14 @@
                 "release_date": {
                     "type": "string"
                 },
+                "search_count": {
+                    "type": "integer"
+                },
                 "title": {
                     "type": "string"
                 },
                 "vote_average": {
                     "type": "number"
-                }
-            }
-        },
-        "models.TrendingMovie": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "integer"
-                },
-                "poster_path": {
-                    "type": "string"
-                },
-                "title": {
-                    "type": "string"
                 }
             }
         }
