# internal/handlers/movie_handler.go
@@ -1,7 +1,8 @@
 package handlers
 
 import (
-	"github.com/A4GOD-AMHG/TMDBVerse-Go-Fiber-Redis-Backend/internal/models"
+	"strconv"
+
 	"github.com/A4GOD-AMHG/TMDBVerse-Go-Fiber-Redis-Backend/internal/services"
 
 	"github.com/gofiber/fiber/v2"
@@ -24,6 +25,7 @@ func NewMovieHandler(service *services.MovieService) *MovieHandler {
 // @Produce      json
 // @Param        page  query     string  false  "Page number"
 // @Success      200   {object}  []models.Movie
+// @Failure      500  {object}  object  "Internal server error"
 // @Router       /discover [get]
 func (h *MovieHandler) DiscoverMovies(c *fiber.Ctx) error {
 	page := c.Query("page", "1")
@@ -44,6 +46,7 @@ func (h *MovieHandler) DiscoverMovies(c *fiber.Ctx) error {
 // @Accept       json
 // @Produce      json
 // @Success      200  {object}  []models.Movie
+// @Failure      500  {object}  object  "Internal server error"
 // @Router       /popular [get]
 func (h *MovieHandler) TopPopularMovies(c *fiber.Ctx) error {
 	movies, err := h.service.GetTopPopularMovies()
@@ -64,6 +67,7 @@ func (h *MovieHandler) TopPopularMovies(c *fiber.Ctx) error {
 // @Param        q     query     string  true   "Search query"
 // @Param        page  query     string  false  "Page number"
 // @Success      200   {object}  []models.Movie
+// @Failure      500  {object}  object  "Internal server error"
 // @Router       /search [get]
 func (h *MovieHandler) SearchMovies(c *fiber.Ctx) error {
 	query := c.Query("q")
@@ -90,7 +94,8 @@ func (h *MovieHandler) SearchMovies(c *fiber.Ctx) error {
 // @Tags         movies
 // @Accept       json
 // @Produce      json
-// @Success      200  {object}  []models.TrendingMovie
+// @Success      200  {object}  []models.Movie
+// @Failure      500  {object}  object  "Internal server error"
 // @Router       /trending [get]
 func (h *MovieHandler) TrendingMovies(c *fiber.Ctx) error {
 	movies, err := h.service.GetTrendingMovies()
@@ -99,10 +104,33 @@ func (h *MovieHandler) TrendingMovies(c *fiber.Ctx) error {
 			"error": err.Error(),
 		})
 	}
+	return c.JSON(movies)
+}
 
-	if movies == nil {
-		movies = []models.TrendingMovie{}
+// @Summary      Get movie details
+// @Description  Get complete details for a specific movie
+// @Tags         movies
+// @Accept       json
+// @Produce      json
+// @Param        id   path      int  true  "Movie ID"
+// @Success      200  {object}  models.Movie
+// @Failure      400  {object}  object  "Invalid ID"
+// @Failure      500  {object}  object  "Internal server error"
+// @Router       /movies/{id} [get]
+func (h *MovieHandler) MovieDetails(c *fiber.Ctx) error {
+	id, err := strconv.Atoi(c.Params("id"))
+	if err != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"error": "Invalid ID",
+		})
 	}
 
-	return c.JSON(movies)
+	movie, err := h.service.GetMovieDetails(id)
+	if err != nil {
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"error": err.Error(),
+		})
+	}
+
+	return c.JSON(movie)
 }
